@@ -6,6 +6,7 @@ unreleased
 - renamed bluealsa-cli to bluealsactl (no backward compatibility)
 - channel map and volume control for surround sound (5.1, 7.1) audio
 - native A2DP volume control by default (dropped --a2dp-volume option)
+- fix configuration for Android 13 A2DP Opus codec
 
 bluez-alsa v4.3.1 (2024-08-30)
 ==============================
